# MCPymol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/mcpymol-guide/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
src/mcpymol/: __init__.py  __main__.py  plugin.py  server.py
tests/: test_auto_wrappers.py  test_conservation.py  test_plugin.py  test_server.py
