[project]
name = "mcpymol"
version = "1.0.0"
description = "A conversational MCP server interface for PyMOL protein visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.26.0",
]

[project.scripts]
mcpymol = "mcpymol.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
