[project]
name = "mcpymol"
version = "1.1.1"
description = "A conversational MCP server interface for PyMOL protein visualization"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "chemrich" },
]
keywords = [
    "pymol",
    "mcp",
    "model-context-protocol",
    "claude",
    "gemini",
    "structural-biology",
    "protein-visualization",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/chemrich/MCPymol"
Repository = "https://github.com/chemrich/MCPymol"
Issues = "https://github.com/chemrich/MCPymol/issues"
Changelog = "https://github.com/chemrich/MCPymol/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# 3D-print export (print_export tool): mesh repair to watertight STL.
print = [
    "trimesh>=4.0",
    "pymeshlab>=2023.12",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "networkx>=3.0",
]

[project.scripts]
mcpymol = "mcpymol.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
